[gd_scene load_steps=16 format=3 uid="uid://bv4nw7rcqf4gq"]

[ext_resource type="Texture2D" uid="uid://cer8pfx07xjae" path="res://assets/textures/backgrounds/spash_screen/background.PNG" id="1_8dcoc"]
[ext_resource type="Script" path="res://menus/background.gd" id="1_82am1"]
[ext_resource type="Texture2D" uid="uid://bgi77xvk7hvag" path="res://assets/textures/backgrounds/spash_screen/orange_grandient.PNG" id="2_7d55p"]
[ext_resource type="Texture2D" uid="uid://bhqjvfwn841il" path="res://assets/textures/backgrounds/spash_screen/pink_gradient.PNG" id="3_6apoh"]
[ext_resource type="Texture2D" uid="uid://b5w7qqw7ey4vn" path="res://assets/textures/backgrounds/spash_screen/purple_gradient.PNG" id="4_f41gi"]
[ext_resource type="Texture2D" uid="uid://vmaj6th0jhq4" path="res://assets/textures/backgrounds/spash_screen/dots.PNG" id="5_tgkv1"]

[sub_resource type="Animation" id="Animation_0twgw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../OrangeGradientLeft:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../OrangeGradientRight:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.196078)]
}

[sub_resource type="Animation" id="Animation_v3ie4"]
resource_name = "SlowBlink"
length = 3.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../OrangeGradientLeft:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.196078)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../OrangeGradientRight:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.196078), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3wm5"]
_data = {
"RESET": SubResource("Animation_0twgw"),
"SlowBlink": SubResource("Animation_v3ie4")
}

[sub_resource type="Animation" id="Animation_g6f0b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PurpleGradient:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_81nas"]
resource_name = "cool"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PurpleGradient:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.694118)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5covp"]
_data = {
"RESET": SubResource("Animation_g6f0b"),
"SlowBlink": SubResource("Animation_81nas")
}

[sub_resource type="Animation" id="Animation_tdvyf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dots:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dots2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pvhow"]
resource_name = "SlowBlink"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dots:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Dots2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qtv76"]
_data = {
"RESET": SubResource("Animation_tdvyf"),
"SlowBlink": SubResource("Animation_pvhow")
}

[node name="Background" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_82am1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8dcoc")

[node name="OrangeGradientLeft" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7d55p")

[node name="OrangeGradientRight" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.196078)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7d55p")
flip_h = true

[node name="PinkGradient" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6apoh")

[node name="PurpleGradient" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_f41gi")

[node name="Dots" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_tgkv1")
stretch_mode = 6

[node name="Dots2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_tgkv1")
stretch_mode = 6
flip_h = true
flip_v = true

[node name="OrangePlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../PurplePlayer")
libraries = {
"": SubResource("AnimationLibrary_u3wm5")
}

[node name="PurplePlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5covp")
}

[node name="DotPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qtv76")
}
